<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Edit me!</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_createSession">Create Session</string>
    <string name="action_endSession">End Session</string>
    <string name="action_joinSession">Join Session</string>
    <string name="action_leaveSession">Leave Session</string>

</resources>
